--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "mongodb": "^3.6.3",
     "next": "^10.0.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-google-login": "^5.2.1"
   },
   "devDependencies": {
     "@types/mongodb": "^3.6.3",
