--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "axios": "^0.21.1",
     "mongodb": "^3.6.3",
     "next": "^10.0.1",
     "react": "^17.0.1",
